--- a/src/Makefile
+++ b/src/Makefile
@@ -1,11 +1,10 @@
-CC = cc
-CFLAGS	= -Wall -O2 -DHAVE_SINCOS -DPREFIX="./candidates" \
-	-DDTAPREFIX="."
-LDFLAGS =
-LOADLIBES = -lm -lgsl -lgslcblas -lfftw3 -lc
+#$(GSL_LIB)  $(GSL_INC) 
+CC = mpicc
+CFLAGS	= -Wall -O2 $(FFTW_INC) -DHAVE_SINCOS -DPREFIX="./candidates" -DDTAPREFIX="." 
+LDFLAGS = $(FFTW_LIB) 
+#LOADLIBES = -lc
 
-search: search.o JobNAllSky-common.o JobNAllSky.o \
-	lvcvirgo.o auxi.o fstat.o gridr.o
+search: search.o JobNAllSky-common.o JobNAllSky.o lvcvirgo.o auxi.o fstat.o gridr.o
 doc:
 	doxygen ../doc/Doxyfile
 clean:
